--- a/client/scripts/app/index.html
+++ b/client/scripts/app/index.html
@@ -9,10 +9,25 @@
     <meta name="description" content="<%=htmlWebpackPlugin.options.title%>">
 	 <!-- base url -->
   	<!-- <base href="<%=htmlWebpackPlugin.options.baseUrl%>"> -->
+
+    <!-- Polymer script -->
+    <script>
+        window.Polymer = window.Polymer || {};
+        window.Polymer.dom = 'shadow';
+    </script>
+    <script src="../../../bower_components/webcomponentsjs/webcomponents-lite.js"></script>
+    <!--<link rel="import" href="../../../bower_components/paper-button/paper-button.html">-->
+    <!--<link rel="import" href="../../../bower_components/paper-checkbox/paper-checkbox.html">-->
+    <!--<link rel="import" href="../../../bower_components/paper-listbox/paper-listbox.html">-->
+    <!--<link rel="import" href="../../../bower_components/paper-item/paper-item.html">-->
+    <!--<link rel="import" href="../../../bower_components/paper-icon-button/paper-icon-button.html">-->
+    <link rel="import" href="../../../bower_components/paper-elements/paper-elements.html">
+    <link rel="import" href="../../../bower_components/iron-icons/iron-icons.html">
 </head>
 
 <body>
     <main>Loading...</main>
+
 </body>
 
 </html>
