--- a/client/scripts/app/index.html
+++ b/client/scripts/app/index.html
@@ -23,9 +23,11 @@
     <!--<link rel="import" href="../../../bower_components/paper-icon-button/paper-icon-button.html">-->
     <link rel="import" href="../../../bower_components/paper-elements/paper-elements.html">
     <link rel="import" href="../../../bower_components/iron-icons/iron-icons.html">
+    <link rel="import" href="../../../bower_components/google-map/google-map.html">
+    <link rel="import" href="../../../bower_components/paper-card/paper-card.html">
 </head>
 
-<body>
+<body unresolved>
     <main>Loading...</main>
 
 </body>
