--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,14 @@
 <!doctype html>
 <html>
   <head>
+    <base href=".">
     <meta charset="utf-8">
-    <title>FountainJS</title>
+    <title>JSROL NG2</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
   </head>
 
   <body>
-    <App>Loading...</App>
+    <Main>Loading...</Main>
   </body>
 </html>
