feat(front): upgrade with fountain to angular rc4

--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,15 @@
 <!doctype html>
 <html>
   <head>
-    <base href=".">
+    <base href="/">
     <meta charset="utf-8">
     <title>JSROL NG2</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
+    <link rel="icon" type="image/png" href="http://fountainjs.io/assets/imgs/fountain.png" />
   </head>
 
   <body>
-    <Main>Loading...</Main>
+    <Root>Loading...</Root>
   </body>
 </html>
