fix(): fix css font loading and MDL on login

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,8 @@
 
   <!-- base url -->
   <base href="<%= webpackConfig.metadata.baseUrl %>">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+        rel="stylesheet">
   <link rel="stylesheet" href="css/leaflet.css">
 </head>
 
