feat(admin): add edit event screen

--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
         rel="stylesheet">
   <link rel="stylesheet" href="css/leaflet.css">
+  <link rel="stylesheet" href="css/mdl-selectfield.css">
 
 </head>
 
