--- a/src/index.html
+++ b/src/index.html
@@ -17,10 +17,10 @@
   <!-- base url -->
   <base href="<%= htmlWebpackPlugin.options.metadata.baseUrl %>">
 
+  <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.indigo-pink.min.css" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
         rel="stylesheet">
   <link rel="stylesheet" href="css/leaflet.css">
-  <link rel="stylesheet" href="css/mdl-selectfield.css">
 
 </head>
 
@@ -29,6 +29,7 @@
   <app>
     Loading...
   </app>
+  <dialog-outlet></dialog-outlet>
 
   <!-- Google Analytics: change UA-71073175-1 to be your site's ID -->
   <script>
