--- a/src/index.html
+++ b/src/index.html
@@ -18,8 +18,7 @@
   <base href="<%= htmlWebpackPlugin.options.metadata.baseUrl %>">
 
   <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.indigo-pink.min.css" />
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-        rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="css/leaflet.css">
 
 </head>
