--- a/src/index.html
+++ b/src/index.html
@@ -17,34 +17,45 @@
   <!-- base url -->
   <base href="<%= htmlWebpackPlugin.options.metadata.baseUrl %>">
 
-  <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.indigo-pink.min.css" />
+  <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.indigo-pink.min.css"/>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="css/leaflet.css">
+  <link rel="stylesheet" href="css/staticStyle.css">
 
 </head>
 
 <body>
 
-  <app>
-    Loading...
-  </app>
-  <dialog-outlet></dialog-outlet>
+<app>
+  <div class="loading__container">
+    <img class="loading__spinner" src="img/spinner.gif">
+    <h3>Chargement ...</h3>
+  </div>
+</app>
+<dialog-outlet></dialog-outlet>
 
-  <!-- Google Analytics: change UA-71073175-1 to be your site's ID -->
-  <script>
-    (function(A,n,g,u,l,a,r){A.GoogleAnalyticsObject=r;A[l]=A[l]||function(){
-    (A[l].q=A[l].q||[]).push(arguments)},A[l].l=1*new Date();a=n.createElement(g),
-    r=n.getElementsByTagName(g)[0];a.async=1;a.src=u;r.parentNode.insertBefore(a,r)
-    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+<!-- Google Analytics: change UA-71073175-1 to be your site's ID -->
+<script>
+  (function (A, n, g, u, l, a, r) {
+    A.GoogleAnalyticsObject = r;
+    A[l] = A[l] || function () {
+        (A[l].q = A[l].q || []).push(arguments)
+      }, A[l].l = 1 * new Date();
+    a = n.createElement(g),
+      r = n.getElementsByTagName(g)[0];
+    a.async = 1;
+    a.src = u;
+    r.parentNode.insertBefore(a, r)
+  })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
-    ga('create', 'UA-71073175-1', 'auto');
-    ga('send', 'pageview');
-  </script>
+  ga('create', 'UA-71073175-1', 'auto');
+  ga('send', 'pageview');
+</script>
 
-  <% if (htmlWebpackPlugin.options.metadata.isDevServer && htmlWebpackPlugin.options.metadata.HMR !== true) { %>
-  <!-- Webpack Dev Server reload -->
-  <script src="/webpack-dev-server.js"></script>
-  <% } %>
+<% if (htmlWebpackPlugin.options.metadata.isDevServer && htmlWebpackPlugin.options.metadata.HMR !== true) { %>
+<!-- Webpack Dev Server reload -->
+<script src="/webpack-dev-server.js"></script>
+<% } %>
 
 
 </body>
